message commit lagi 6th

--- a/stylenew.css
+++ b/stylenew.css
@@ -5,8 +5,8 @@
 
 .smart_header {
     background: #f6f5fa none repeat scroll 0 0;
+    height: 82px;
 }
-
 #transaction-detail > strong {
     display: none
 }
